generated/algoParser.py
# Generated from algo.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class algoParser ( Parser ):

    grammarFileName = "algo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algorithme'", "'Algorithme'", "'d\\u00E9but'", 
                     "'Debut'", "'D\\u00E9but'", "'debut'", "'fin'", "'Fin'", 
                     "'FIN'", "':'", "'fin_tdnt'", "'='", "'enregistrement'", 
                     "','", "'tableau'", "'de'", "'fin_tdo'", "'ouvrir'", 
                     "'('", "')'", "'fermer'", "'lire'", "'\\u00E9crire'", 
                     "'ecrire'", "'si'", "'alors'", "'sinon'", "'sinonsi'", 
                     "'SinonSi'", "'sinonSi'", "'fin_si'", "'finsi'", "'tant'", 
                     "'que'", "'tantque'", "'faire'", "'fin_tant_que'", 
                     "'fintantque'", "'pour'", "'Pour'", "'\\u00E0'", "'a'", 
                     "'pas'", "'fin_pour'", "'finpour'", "'r\\u00E9p\\u00E9ter'", 
                     "'repeter'", "'R\\u00E9p\\u00E9ter'", "'Repeter'", 
                     "'jusqu\\u2019\\u00E0'", "'jusqua'", "'jusqu'a'", "'selon'", 
                     "'cas'", "'autres'", "'fin_selon'", "'procedure'", 
                     "'proc\\u00E9dure'", "'Proc\\u00E9dure'", "'Procedure'", 
                     "'fin_procedure'", "'fin_proc\\u00E9dure'", "'fonction'", 
                     "'Fonction'", "'retourner'", "'fin_fonction'", "'@'", 
                     "'*'", "'/'", "'+'", "'-'", "'<'", "'<='", "'\\u2264'", 
                     "'>'", "'>='", "'\\u2265'", "'=='", "'!='", "'\\u2260'", 
                     "'\\u2208'", "'et'", "'ou'", "'ouex'", "'non'", "'['", 
                     "']'", "'<-'", "':='", "'entier'", "'r\\u00E9el'", 
                     "'reel'", "'bool\\u00E9en'", "'booleen'", "'bool'", 
                     "'caract\\u00E8re'", "'caractere'", "'cha\\u00EEne'", 
                     "'chaine'", "'fichier'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'TDNT'", "'TDO'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "BOOLEAN", "CHAR", "STRING", 
                      "TDNT", "TDO", "IDENTIFIER", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_tdntDecl = 1
    RULE_newTypeDecl = 2
    RULE_tdoDecl = 3
    RULE_varDecl = 4
    RULE_block = 5
    RULE_statement = 6
    RULE_openFileStmt = 7
    RULE_fileMode = 8
    RULE_closeFileStmt = 9
    RULE_inputStmt = 10
    RULE_outputStmt = 11
    RULE_ifStmt = 12
    RULE_whileStmt = 13
    RULE_forStmt = 14
    RULE_jusquaStmt = 15
    RULE_selonStmt = 16
    RULE_procedureDecl = 17
    RULE_functionDecl = 18
    RULE_paramList = 19
    RULE_param = 20
    RULE_funcCall = 21
    RULE_expr = 22
    RULE_assignStmt = 23
    RULE_typeName = 24

    ruleNames =  [ "program", "tdntDecl", "newTypeDecl", "tdoDecl", "varDecl", 
                   "block", "statement", "openFileStmt", "fileMode", "closeFileStmt", 
                   "inputStmt", "outputStmt", "ifStmt", "whileStmt", "forStmt", 
                   "jusquaStmt", "selonStmt", "procedureDecl", "functionDecl", 
                   "paramList", "param", "funcCall", "expr", "assignStmt", 
                   "typeName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    NUMBER=101
    BOOLEAN=102
    CHAR=103
    STRING=104
    TDNT=105
    TDO=106
    IDENTIFIER=107
    LINE_COMMENT=108
    BLOCK_COMMENT=109
    NEWLINE=110
    WS=111

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(algoParser.IDENTIFIER, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(algoParser.NEWLINE)
            else:
                return self.getToken(algoParser.NEWLINE, i)

        def block(self):
            return self.getTypedRuleContext(algoParser.BlockContext,0)


        def tdntDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoParser.TdntDeclContext)
            else:
                return self.getTypedRuleContext(algoParser.TdntDeclContext,i)


        def tdoDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoParser.TdoDeclContext)
            else:
                return self.getTypedRuleContext(algoParser.TdoDeclContext,i)


        def getRuleIndex(self):
            return algoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = algoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 51
            self.match(algoParser.IDENTIFIER)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.match(algoParser.NEWLINE)
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==110):
                    break

            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==105 or _la==106:
                self.state = 59
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [105]:
                    self.state = 57
                    self.tdntDecl()
                    pass
                elif token in [106]:
                    self.state = 58
                    self.tdoDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==110:
                    self.state = 61
                    self.match(algoParser.NEWLINE)
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 73
            self.match(algoParser.NEWLINE)
            self.state = 74
            self.block()
            self.state = 75
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TdntDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TDNT(self):
            return self.getToken(algoParser.TDNT, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(algoParser.NEWLINE)
            else:
                return self.getToken(algoParser.NEWLINE, i)

        def newTypeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoParser.NewTypeDeclContext)
            else:
                return self.getTypedRuleContext(algoParser.NewTypeDeclContext,i)


        def getRuleIndex(self):
            return algoParser.RULE_tdntDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTdntDecl" ):
                listener.enterTdntDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTdntDecl" ):
                listener.exitTdntDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTdntDecl" ):
                return visitor.visitTdntDecl(self)
            else:
                return visitor.visitChildren(self)




    def tdntDecl(self):

        localctx = algoParser.TdntDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tdntDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(algoParser.TDNT)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 78
                self.match(algoParser.T__9)


            self.state = 81
            self.match(algoParser.NEWLINE)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.newTypeDecl()
                self.state = 83
                self.match(algoParser.NEWLINE)
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==107):
                    break

            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 89
                self.match(algoParser.T__10)
                self.state = 90
                self.match(algoParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewTypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(algoParser.IDENTIFIER)
            else:
                return self.getToken(algoParser.IDENTIFIER, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(algoParser.NEWLINE)
            else:
                return self.getToken(algoParser.NEWLINE, i)

        def typeName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoParser.TypeNameContext)
            else:
                return self.getTypedRuleContext(algoParser.TypeNameContext,i)


        def NUMBER(self):
            return self.getToken(algoParser.NUMBER, 0)

        def getRuleIndex(self):
            return algoParser.RULE_newTypeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewTypeDecl" ):
                listener.enterNewTypeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewTypeDecl" ):
                listener.exitNewTypeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewTypeDecl" ):
                return visitor.visitNewTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def newTypeDecl(self):

        localctx = algoParser.NewTypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_newTypeDecl)
        self._la = 0 # Token type
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(algoParser.IDENTIFIER)
                self.state = 94
                self.match(algoParser.T__11)
                self.state = 95
                self.match(algoParser.T__12)
                self.state = 96
                self.match(algoParser.NEWLINE)
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 97
                    self.match(algoParser.IDENTIFIER)
                    self.state = 98
                    self.match(algoParser.T__9)
                    self.state = 99
                    self.typeName()
                    self.state = 100
                    self.match(algoParser.T__13)
                    self.state = 101
                    self.match(algoParser.NEWLINE)
                    self.state = 105 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==107):
                        break

                self.state = 107
                self.match(algoParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(algoParser.IDENTIFIER)
                self.state = 110
                self.match(algoParser.T__11)
                self.state = 111
                self.match(algoParser.T__14)
                self.state = 112
                self.match(algoParser.T__15)
                self.state = 113
                self.match(algoParser.NUMBER)
                self.state = 114
                self.typeName()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TdoDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TDO(self):
            return self.getToken(algoParser.TDO, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(algoParser.NEWLINE)
            else:
                return self.getToken(algoParser.NEWLINE, i)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(algoParser.VarDeclContext,i)


        def getRuleIndex(self):
            return algoParser.RULE_tdoDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTdoDecl" ):
                listener.enterTdoDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTdoDecl" ):
                listener.exitTdoDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTdoDecl" ):
                return visitor.visitTdoDecl(self)
            else:
                return visitor.visitChildren(self)




    def tdoDecl(self):

        localctx = algoParser.TdoDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tdoDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(algoParser.TDO)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 118
                self.match(algoParser.T__9)


            self.state = 121
            self.match(algoParser.NEWLINE)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.varDecl()
                self.state = 123
                self.match(algoParser.NEWLINE)
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==107):
                    break

            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 129
                self.match(algoParser.T__16)
                self.state = 130
                self.match(algoParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(algoParser.IDENTIFIER, 0)

        def typeName(self):
            return self.getTypedRuleContext(algoParser.TypeNameContext,0)


        def NUMBER(self):
            return self.getToken(algoParser.NUMBER, 0)

        def getRuleIndex(self):
            return algoParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = algoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(algoParser.IDENTIFIER)
                self.state = 134
                self.match(algoParser.T__9)
                self.state = 135
                self.typeName()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(algoParser.IDENTIFIER)
                self.state = 137
                self.match(algoParser.T__9)
                self.state = 138
                self.match(algoParser.T__14)
                self.state = 139
                self.match(algoParser.T__15)
                self.state = 140
                self.match(algoParser.NUMBER)
                self.state = 141
                self.typeName()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoParser.StatementContext)
            else:
                return self.getTypedRuleContext(algoParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(algoParser.NEWLINE)
            else:
                return self.getToken(algoParser.NEWLINE, i)

        def getRuleIndex(self):
            return algoParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = algoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -7051579793017143296) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 79164837199873) != 0):
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [18, 21, 22, 23, 24, 25, 33, 35, 39, 40, 46, 47, 48, 49, 53, 57, 58, 59, 60, 63, 64, 107]:
                    self.state = 144
                    self.statement()
                    self.state = 145
                    self.match(algoParser.NEWLINE)
                    pass
                elif token in [110]:
                    self.state = 147
                    self.match(algoParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return algoParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OpenFileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a algoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def openFileStmt(self):
            return self.getTypedRuleContext(algoParser.OpenFileStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpenFileStatement" ):
                listener.enterOpenFileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpenFileStatement" ):
                listener.exitOpenFileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpenFileStatement" ):
                return visitor.visitOpenFileStatement(self)
            else:
                return visitor.visitChildren(self)


    class JusquaStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a algoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def jusquaStmt(self):
            return self.getTypedRuleContext(algoParser.JusquaStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJusquaStatement" ):
                listener.enterJusquaStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJusquaStatement" ):
                listener.exitJusquaStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJusquaStatement" ):
                return visitor.visitJusquaStatement(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a algoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStmt(self):
            return self.getTypedRuleContext(algoParser.WhileStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class CloseFileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a algoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def closeFileStmt(self):
            return self.getTypedRuleContext(algoParser.CloseFileStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCloseFileStatement" ):
                listener.enterCloseFileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCloseFileStatement" ):
                listener.exitCloseFileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCloseFileStatement" ):
                return visitor.visitCloseFileStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a algoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignStmt(self):
            return self.getTypedRuleContext(algoParser.AssignStmtContext,0)

